--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "noty": "^3.2.0-beta-deprecated",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
